# advent_of_code_2016

./: Cargo.toml
src/01/: main.rs
src/02/: main.rs
src/03/: input.txt  main.rs
src/04/: decrypted.txt  main.rs
src/05/: main.rs
src/06/: main.rs
src/07/: main.rs
src/08/: main.rs
src/09/: main.rs  no_std.rs
src/10/: main.rs
src/12/: main.rs
