[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]

[[bin]]
name = "day_01"
path = "src/01/main.rs"

[[bin]]
name = "day_02"
path = "src/02/main.rs"

[[bin]]
name = "day_03"
path = "src/03/main.rs"

[[bin]]
name = "day_04"
path = "src/04/main.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
arrayvec = "0.3"
